[gd_scene load_steps=6 format=2]

[ext_resource path="res://Popups/PopupBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://Popups/InventoryPopup.gd" type="Script" id=2]
[ext_resource path="res://Popups/Addons/ItemList.tscn" type="PackedScene" id=3]
[ext_resource path="res://Popups/Addons/PlayerInfo.tscn" type="PackedScene" id=4]
[ext_resource path="res://Popups/Addons/ItemInfo.tscn" type="PackedScene" id=5]

[node name="InventoryPopup" instance=ExtResource( 1 )]

script = ExtResource( 2 )

[node name="CenterContainer" type="CenterContainer" parent="Content" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 200.0
margin_top = 150.0
margin_right = 824.0
margin_bottom = 450.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false
_sections_unfolded = [ "Margin" ]

[node name="PanelContainer" type="PanelContainer" parent="Content/CenterContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 9.0
margin_right = 615.0
margin_bottom = 310.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Content/CenterContainer/PanelContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 7.0
margin_top = 7.0
margin_right = 599.0
margin_bottom = 303.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="Inventory" parent="Content/CenterContainer/PanelContainer/HBoxContainer" index="0" instance=ExtResource( 3 )]

margin_bottom = 296.0

[node name="PlayerInfo" parent="Content/CenterContainer/PanelContainer/HBoxContainer" index="1" instance=ExtResource( 4 )]

margin_left = 300.0
margin_right = 400.0
margin_bottom = 296.0

[node name="ItemInfo" parent="Content/CenterContainer/PanelContainer/HBoxContainer" index="2" instance=ExtResource( 5 )]

margin_left = 404.0
margin_right = 592.0

[connection signal="item_activated" from="Content/CenterContainer/PanelContainer/HBoxContainer/Inventory" to="." method="_on_item_activated"]

[connection signal="item_selected" from="Content/CenterContainer/PanelContainer/HBoxContainer/Inventory" to="." method="_on_item_selected"]

[connection signal="item_activated" from="Content/CenterContainer/PanelContainer/HBoxContainer/PlayerInfo" to="." method="_on_item_unequiped"]

[connection signal="item_selected" from="Content/CenterContainer/PanelContainer/HBoxContainer/PlayerInfo" to="." method="_on_equip_selected"]

[connection signal="item_equiped" from="Content/CenterContainer/PanelContainer/HBoxContainer/ItemInfo" to="." method="_on_item_equiped"]

[connection signal="item_unequiped" from="Content/CenterContainer/PanelContainer/HBoxContainer/ItemInfo" to="." method="_on_item_unequiped"]

[connection signal="item_used" from="Content/CenterContainer/PanelContainer/HBoxContainer/ItemInfo" to="." method="_on_item_used"]


